--- a/dev-docs/设计说明.md
+++ b/dev-docs/设计说明.md
@@ -1,20 +1,35 @@
-简要业务逻辑设计说明和数据库设计说明
+# 简要业务逻辑设计说明和数据库设计说明
 
-一、设计说明：
+## 一、设计说明：
+
 1、每个用户可以注册，然后登录网站。
+
 2、一个用户可以创建项目，测试用例，测试步骤，测试计划，测试用例结果，测试步骤结果
+
 3、一个用户可以加入其他项目，但需要经过审批
+
 4、该条已删除
+
 5、一个项目下可以有很多个测试用例
+
 6、一个测试用例下可以有很多测试步骤
+
 7、针对一个项目下的所有测试用例，选出子集（可以是一个，也可以是全部，也可以根据Area，或者Category，Tag筛选出），基于这个子集，建立一个测试计划
+
 8、每个测试计划下很多个测试用例结果，每一个测试用例结果下有很多个测试步骤结果，这些数据都在测试计划被建立时存入数据库，后续的结果只需让用户更新表中的相应字段就可以。
+
 9、一个项目P1只能有一个创建者就是用户A，用户B加入项目P1，只能作为测试管理员和测试执行人员，并不具备对该项目表记录的权限，只知道项目的名称是P1，存储在JoinRepo。
+
 10、项目的属性ishide：项目隐藏之后，公众看不到，只有项目创建者和项目下的测试管理人员和项目下的测试执行人员看得到。隐藏的项目需要创建者邀请其他人加入，其他人加入后才能看到。
+
 11、表Repo的字段adminid存储的是创建他的用户id。
+
 12、Role分为三种，项目创建者，测试管理员，测试执行人员。
+
 13、当一个用户加入一个项目后，他可以对此项目作测试操作。
+
 14、该条已删除。
+
 15、测试操作分为增删改查
 	1.创建者具有自己项目下所有实体的增删改查的操作权限
 	2.而测试人员具有两类权限，
@@ -27,14 +42,17 @@
 		测试用例结果：更新操作权限
 		测试步骤结果：更新操作权限
 
-二、未确定疑问或者业务逻辑有问题或者未考虑充分：
+## 二、未确定疑问或者业务逻辑有问题或者未考虑充分：
+
 repo应该修改为project？
+
 TestExecution应该修改为TestPlan？
-用户权限未设计好！
 
-三、详细数据库表说明
-**最新数据库请看：**https://github.com/gittestapi/gittest/blob/master/gittest.sql
+## 三、详细数据库表说明
 
+**最新数据库请看:** https://github.com/gittestapi/gittest/blob/master/gittest.sql
+
+```
 CREATE TABLE Repo (repoid INT NOT NULL AUTO_INCREMENT, reponame VARCHAR(300), adminid INT NOT NULL,ishide CHAR(1), RegisterDate DATETIME, PRIMARY KEY ( repoid ));
 Repo仓库编号/项目编号
 reponame仓库名称/项目编号
@@ -113,3 +131,4 @@ CREATE TABLE Tag (id INT NOT NULL AUTO_INCREMENT, repoid INT NOT NULL, tag VARCH
 Tag标签表
 repoid项目编号
 tag标签名
+```
